--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,43 @@ body {
   height: 100vh;
   width: 100vw;
 }
+
+/* dropdown options */
+
+#dropdown-container {
+  position: relative;
+  display: inline-block;
+}
+
+/* #dropdown-container:hover .dropdown-content {
+  display: block;
+} */
+
+#dropdown-button {
+  background-color: plum;
+}
+
+.dropdown-content {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1;
+  display: none;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+
+li {
+  padding: 8px 12px;
+}
+
+li:hover {
+  background-color: lime;
+}
+
+
