--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,178 @@ body {
   margin: 0;
   padding: 0;
   margin-bottom: 8vh;
+  background-color: rgb(50,7,8);
+  color: #F9B6B4;
 }
 
-#header,
-#footer {
-  background-color: aqua;
+/* account pages */
+
+/* start page */
+.startPage {
+  margin: 5vh 0;
+  display: grid;
+  grid-template-areas:
+  'logo'
+  'brand'
+  'form';
+  justify-content: center;
+}
+
+.logo {
+  grid-area: logo;
+  justify-self: center;
+}
+
+.brand {
+  grid-area: brand;
+  font-size: 15vw;
+  text-align: center;
+}
+
+/* sign in page */
+
+.signInPage {
+  grid-area: form;
+  display: grid;
+  grid-template-areas:
+  'un'
+  'pw'
+  '.'
+  '.'
+  '.';
+  justify-content: center;
+  justify-items: center;
+  row-gap: 2vh;
+}
+
+.usernameInput {
+  grid-area: un;
+}
+
+.passwordInput {
+  grid-area: pw;
+}
+
+.usernameInput, .passwordInput {
+  font-size: 2vw;
+  text-align: center;
+  background: none;
+  border-style: none;
+  border-radius: 20px;
+  height: 3vh;
+  width: 35vw;
+  border: solid 2px #F9B6B4;
+  color: #F9B6B4;
+  font-family: "Inter", sans-serif;
+}
+
+.usernameInput::placeholder, .passwordInput::placeholder {
+  font-family: "Inter", sans-serif;
+  color: #F9B6B4;
+  text-align: center;
+  opacity: 0.3;
+}
+
+.usernameInput:focus, .passwordInput:focus {
+  outline: none;
+  color: #F9B6B4;
+  background-color: #5c1128;
+  font-family: "Inter", sans-serif;
+}
+
+.usernameInput:hover, .passwordInput:hover {
+  background-color: #5c1128;
+}
+
+.signIn {
+  margin-top: 4vh;
+}
+
+.signIn, .forgotPassword, .signUp {
+  font-size: 2vw;
+  background-color: #810E1B;
+  border: solid 2px #F9B6B4;
+  color: #F9B6B4;
+  height: 3vh;
+  width: 27vw;
+  border-radius: 20px;
+  font-family: "Inter", sans-serif;
+}
+
+.signIn:hover, .forgotPassword:hover, .signUp:hover {
+  background-color: #5c1128;
+  color: #F9B6B4;
+}
+
+/* forgot password page */
+.forgotPasswordPage {
+  grid-area: form;
+  justify-self: center;
+}
+
+/* sign up page */
+
+.signUpPage {
+  grid-area: form;
+  display: grid;
+  grid-template-areas:
+  'un'
+  'pw'
+  '.'
+  '.'
+  '.';
+  justify-content: center;
+  justify-items: center;
+  row-gap: 2vh;
+}
+
+
+/* welcome banner */
+
+#welcome {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background-color: black;
+  background-image: url('https://i.imgur.com/6M5fXhQ.png');
+  background-size: cover;
+  opacity: 0.8;
+  text-align: center;
+  z-index: 1;
+
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+}
+
+#welcome h1 {
+  text-align: center;
+  font-size: 10vw;;
+}
+
+#welcome button {
+  font-size: 2vw;
+  background-color: #810E1B;
+  border: solid 2px #F9B6B4;
+  color: #F9B6B4;
+  height: 3vh;
+  width: 27vw;
+  border-radius: 20px;
+  font-family: "Inter", sans-serif;
+  align-self: flex-start;
+}
+
+#welcome button:hover {
+  background-color: #5c1128;
+  color: #F9B6B4;
+}
+
+.hideWelcome {
+  animation-name: hideDiv;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
 }
 
 @keyframes hideDiv {
@@ -19,24 +186,132 @@ body {
   }
 }
 
-#welcomeDiv {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  background-color: red;
-  opacity: 0.8;
-  text-align: center;
-  z-index: 1;
-}
-
-.hideWelcomeDiv {
-  animation-name: hideDiv;
-  animation-duration: 0.5s;
-  animation-fill-mode: forwards;
-}
-
 .hideOverflow {
   overflow: hidden;
+}
+
+
+/* header & footer */
+
+#header {
+  margin: 5vh 3vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  font-size: 2vw;
+}
+
+.headerLinks {
+  color: #F9B6B4;
+  text-decoration: none;
+}
+
+.headerLinks:hover {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+/* header dropdown */
+
+.headerDropdown {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  justify-content: center;
+  justify-items: center;
+  text-align: left;
+  position: relative;
+  display: inline-block;
+}
+
+#headerDropdownContent {
+  position: absolute;
+}
+
+.headerDropdownContent {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1;
+  display: none;
+}
+
+.menu:hover {
+  color: #ffffff;
+}
+
+.menuOptions {
+  color: #F9B6B4;
+  text-decoration: none;
+}
+
+.menuOptions:hover {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+/* now playing */
+
+#nowPlaying {
+  position: fixed;
+  bottom: 0;
+  z-index: 0;
+  background-color: #050404;
+  opacity: 0.8;
+  color: white;
+  height: 70px;
+  width: 100%;
+  padding: 20px;
+
+  display: grid;
+  grid-template-areas:
+  '1 2 3';
+  align-items: flex-end;
+}
+
+.nowPlayingCol1 {
+  justify-self: flex-start;
+  display: grid;
+  /* grid-template-rows: 1fr 1fr 1fr;
+  grid-template-areas:
+  '1'
+  '2'
+  '3';
+  justify-content: center;
+  justify-items: start;
+  align-items: center; */
+}
+
+.trackImage {
+}
+
+.trackArtist {
+}
+
+.trackName {
+
+}
+
+.nowPlayingCol2 {
+  justify-self: center;
+  display: grid;
+}
+
+.nowPlayingCol3 {
+  display: grid;
+  grid-template-areas:
+  'min scroll'
+  'icon slider';
+}
+
+.scroll {
+  grid-area: scroll;
+}
+
+.minMax {
+  grid-area: min;
+
 }
 
 #home div {
@@ -51,21 +326,17 @@ body {
   font-size: 10px;
 }
 
-#nowPlaying {
-  position: fixed;
-  bottom: 0;
-  z-index: 0;
-  background-color: navy;
-  opacity: 0.5;
-  color: white;
-  height: 8vh;
-  width: 100%;
-}
 
 .maximised {
   height: 100vh !important;
   width: 100vw !important;
 }
+
+
+
+
+
+
 
 /* dropdown options */
 
@@ -74,14 +345,7 @@ body {
   display: inline-block;
 }
 
-/* #dropdown-container:hover .dropdown-content {
-  display: block;
-} */
-
-#dropdown-button {
-  background-color: plum;
-}
-
+/* will hide etc */
 .dropdown-content {
   position: absolute;
   top: 100%;
@@ -90,20 +354,6 @@ body {
   display: none;
 }
 
-/* ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-} */
-
-
-/* li {
-  padding: 8px 12px;
-}
-
-li:hover {
-  background-color: lime;
-} */
 
 #newPlaylistNameInput, #newPlaylistNameInputButton {
   display: none;
